# canvas-ai

./: .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/app/: genai.py  main.py  one_shot.py
frontend/: Dockerfile  app.py  pyproject.toml
frontend/src/: api.py  constants.py
